Update code to build